--- a/exams/exam_janvier2022/api/package.json
+++ b/exams/exam_janvier2022/api/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.2",
+    "mongodb-memory-server": "^10.0.0",
     "mongoose": "^6.1.7",
     "morgan": "^1.10.0"
   },
